# med_khan

./: Makefile  README.md  docker-compose.yaml  nginx.conf
backend/: .env  .fuse_hidden0000000800000007  Dockerfile  alembic.ini  forge-config.yaml  pyproject.toml  requirements.txt  start.sh
backend/Medkhan/: __main__.py  enums.py  exceptions.py  main.py  middleware.py  settings.py  storage.py
backend/Medkhan/admin/: __init__.py  checkup.py  contact_request.py  departament.py  doctor.py  service.py  speciality.py
backend/Medkhan/daos/: __init__.py  base_daos.py  checkup_daos.py  contact_request_daos.py  departament_daos.py  doctor_daos.py  service_daos.py  speciality_daos.py
backend/Medkhan/db/: __init__.py  db_dependencies.py  db_lifetime.py
backend/Medkhan/dependencies/: file_storage.py
backend/Medkhan/dtos/: __init__.py  checkup_dtos.py  contact_request_dtos.py  departament_dtos.py  doctor_dtos.py  service_dtos.py  speciality_dtos.py
backend/Medkhan/file_storage/: .fuse_hidden000082b70000000a  FileStorageManager.py  LocalFileStorage.py  __init__.py
backend/Medkhan/models/: __init__.py  checkup_models.py  contact_request_models.py  departament_models.py  doctor_models.py  service_models.py  speciality_models.py
backend/Medkhan/routes/: __init__.py  checkup_routes.py  contact_request_routes.py  demo_routes.py  doctor_routes.py  health_routes.py
backend/Medkhan/services/redis/: __init__.py  redis_dependencies.py  redis_lifetime.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_09_25_0522-9b0126908542_init.py  2025_09_25_0613-0e4595128d40_add_expired_at.py
backend/tests/: conftest.py  factories.py  test_utils.py
backend/tests/endpoint_tests/checkup/: __init__.py  (+5 more)
(+124 files in other folders)
